# astra-cli

./: README.md  main.py  pyproject.toml
astracli_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
